--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.parthdesai1208.myar">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
+    <!--<uses-feature android:glEsVersion="0x00020000" android:required="true" />-->
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -10,6 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAR">
+
+        <meta-data android:name="com.google.ar.core" android:value="required" />
+
+        <activity
+            android:name=".ARActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="locked"
+            android:exported="false" />
         <activity
             android:name=".SecondScreen"
             android:exported="false"
