--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.chibatching.kotpref:kotpref:2.11.0'
 
     implementation 'com.google.ar:core:1.29.0'
+
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1" //1.4.0
 }
