--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    implementation 'com.chibatching.kotpref:kotpref:2.11.0'
-
     implementation 'com.google.ar:core:1.29.0'
 
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1" //1.4.0
+    implementation "com.google.ar.sceneform:animation:1.17.1"
 }
