--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'com.google.gms.google-services'
 }
 
+
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.parthdesai1208.myar"
+        applicationId "com.hrishikeshkayal123.ar.navigation"
         minSdk 24
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -41,16 +41,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
-    implementation platform('com.google.firebase:firebase-bom:29.0.3')
-
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.0.1'
-
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-
     implementation 'com.google.ar:core:1.29.0'
-
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1" //1.4.0
+    implementation 'com.google.ar.sceneform:core:1.17.1'
     implementation "com.google.ar.sceneform:animation:1.17.1"
+    implementation 'com.google.ar.sceneform:assets:1.17.1'
 }
+
+apply plugin: 'com.google.ar.sceneform.plugin'
+
+
+sceneform.asset('sampledata/objects/andy.obj', // 'Source Asset Path' specified during import.
+        'default',                            // 'Material Path' specified during import.
+        'sampledata/models/andy.sfa',         // '.sfa Output Path' specified during import.
+        'src/main/res/raw/andy')
